Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-35171

Javascript functions passed as signal arguments are silently converted to undefined

    XMLWordPrintable

Details

    • 70004585f89f325f398c556d101bfa1833d87b53 (qtdeclarative)

    Description

      I expect the following code to print "function() ...". Instead it prints "undefined".

      QtObject {
          signal someSignal(var x)
          onSomeSignal: console.log(x)
      
          Component.onCompleted: {
              var x = function () {};
              someSignal(x);
          }
      }

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            shausman Simon Hausmann
            mkle Matthias Kleine
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes